--- a/static/styles.css
+++ b/static/styles.css
@@ -93,6 +93,7 @@ padding: 5px;
 background-color: #fff;
 /*border: 1px solid #ccc;*/
 border-radius: 3px;
+font-size: 15px;
 
 }
 
@@ -400,10 +401,12 @@ p:not([class]){
   }
 
   /*loading頁面*/
-  #loadingContainer.hidden, #confirmationModal.hidden, #regenertationModal.hidden {
+
+
+  #loadingContainer.hidden, #confirmationModal.hidden, #regenertationModal.hidden, #his_adjust.hidden, #his_confirmationModal.hidden{
     display: none;
   }
-  #loadingContainer, #confirmationModal, #regenertationModal {
+  #loadingContainer, #confirmationModal, #regenertationModal, #his_confirmationModal {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -453,7 +456,7 @@ p:not([class]){
 .modal-content {
   background-color: #fefefe;
   margin: auto;
-  padding: 1px;
+  padding: 3px;
   border: 1px solid #888;
   width: 80%;
   max-width: 500px;
@@ -487,7 +490,8 @@ p:not([class]){
 
 #confirmButton,
 #cancelButton,
-#send  {
+#send,
+#his_confirmButton  {
   padding: 6px 12px;
   margin-left: 10px;
   font-size: 14px;
@@ -496,7 +500,7 @@ p:not([class]){
   margin: 2px;
 }
 
-#confirmButton, #cancelButton, #send {
+#confirmButton, #cancelButton, #send, #his_confirmButton{
   background-color: #000; 
   color: white; /* White text color */
   border: none;
