--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,23 @@
       </div>
   </div>
 </div>
+<div id="his_confirmationModal" class="hidden">
+  <div class="modal-content">
+      <div class="title">確認歷史事件</div>
+      <p>請確認是否要以此關鍵字去搜尋歷史事件</p>
+      <div id="historyKeywordContainer">
+        <p style="display: inline;">歷史事件關鍵字：</p>
+        <button id="his_adjustment" onclick="adjustment()" style="border: none; background: none; font-size: 10px;text-decoration:underline; display: inline;">修改</button>
+      </div>
+      <div id="his_adjust" class="hidden">
+        <label>修改歷史事件關鍵字: </label>
+        <input type="text" placeholder="輸入歷史事件關鍵字" style="border: #000 1px solid; background-color: #fff; color:#000;">
+      </div>
+      <div id="modalButtons">
+          <button id="his_confirmButton">搜尋</button>
+      </div>
+  </div>
+  </div>
 <div id="regenertationModal" class="hidden" >
   <div class="modal-content">
       <div class="title">重新搜尋</div>
@@ -81,7 +98,7 @@
      KGSearchWidget(key="AIzaSyC-do9AgWGWbNl2OrEfpsiYu8PSNjJxkY0", document.getElementById("user_input_company"), {});
     </script>
      <i class="fa-solid fa-circle-info tooltip" style="color: #ffffff;">
-      <span class="tooltiptext">請輸入公司名稱</span>
+      <span class="tooltiptext">請優先輸入公司完整股票代碼或公司名稱</span>
     </i>
     <label for="user_input_hint">HINT </label>
     <input type="text" class="form-control" id="user_input_hint" placeholder="Point of view(選填)" >
@@ -131,13 +148,7 @@
         <!-- 頁籤的內容區塊 -->
         <div id="div_casual"  class="casual_content" style="margin-left:3%;padding:1px 16px;min-height:800px; display: none;text-align: left;overflow: hidden; margin-bottom: 8%;">
         <div id="div_casual_answer">
-          <h4 class="title-heading">因果關聯圖</h4>
-          <div id="graph">
-            <form id="generating-form" style="float: right;">
-              <button style="border: none;" type="submit" ><i class="fa-solid fa-rotate-right" style="color: #000000;"></i></button>
-            </form>
-            <img class="thum-img" src="../static/my_graph.svg" onclick="showBgImg(this)" style="width: 100%; cursor: zoom-in;"/>
-          </div>
+          
                       
         </div>  
 
@@ -149,10 +160,7 @@
             </div>
           </div>   
           </div>  
-        
-
-          
-
+      
         <div id="div_casual_answer"> 
         <div style="width:100%; float:left;">
           <h4 class="title-heading">觀點分析</h4>
@@ -161,6 +169,15 @@
           </div>
         </div>   
         </div>  
+
+        <div id="news_contain">
+          <div style="width:100%; float:left;">
+            <h4 class="title-heading">近期新聞</h4>
+            <div id="news" class="contain_css">
+             <p>近期新聞</p> 
+            </div>
+          </div>
+        </div>
         </div>
         
             
@@ -261,6 +278,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 <script type="text/javascript">
+
+  function adjustment() {
+    document.getElementById("his_adjust").style.display = "block";
+  }
+
+
 	function w3_open() {
 		document.getElementById("mySidebar").style.display = "block";
 		document.getElementById("container").style.width = "72%";
