--- a/templates/index.html
+++ b/templates/index.html
@@ -173,11 +173,15 @@
         <div id="news_contain">
           <div style="width:100%; float:left;">
             <h4 class="title-heading">近期新聞</h4>
+            <a href="#" id="ref_button">參考連結</a>
+            <br>
             <div id="news" class="contain_css">
              <p>近期新聞</p> 
             </div>
           </div>
         </div>
+
+
         </div>
         
             
